src/App.scss
.tf-app {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    text-align: left;
    width: 100%;

    .people {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        
        .person-wrapper {
            display: flex;
            flex-wrap: wrap;
            flex-direction: row;
            width: 100%;
        }
        .person {
            flex: 1 1 100%;
            max-width: 33%;
            .profile-image {
                width: 32px;
                height: 32px;
                background-color: #000;
                border-radius: 50%;
                color: #fff;
                text-align: center;
                display: flex;
                align-items: center;
                > div {
                    flex: 0 0 100%;
                }
            }
            .profile-info {
                flex: 0 0 100%;
                max-width: calc(100% - (32px + 1rem));
                display: flex;
                flex-wrap: wrap;
                flex-direction: row;
                padding-left: 1rem;
                .name {
                    flex: 0 0 100%;
                    max-width: 100%;
                    > h3 {
                        margin: 0;
                    }
                }
                .cups-info {
                    flex: 0 0 100%;
                    max-width: 100%;
                    display: flex;
                    .made, .drank {
                        flex: 0 0 auto;
                    }
                    .tf-btn {
                        flex: 0 0 100%;
                    }
                }
            }
        }
    }
}

.tf-header {
    padding-top: 10px;
    padding-bottom: 30px;
}

.tf-btn {
    background-color: #eee;
    border: none;
    color: #333;
    padding: 5px 15px;
    cursor: pointer;
}

@import './components/WinnerModal/styles';

